# Cheat_sheet_at_HTML

./: .gitignore  manage.py  pyproject.toml
Cheat_sheet_at_HTML/: asgi.py  settings.py  urls.py  wsgi.py
layout/: apps.py  urls.py  views.py
layout/templates/layout/: 10_border_1.html  11_border_2.html  12_border_color.html  13_border_radius.html  14_border_radius_1.html  15_start.html  16_start_1.html  17_table.html  18_table_1.html  1_start1.html  2_color_bg.html  3_color_text.html  4_color_text_bg.html  5_space_1.html  6_space_2.html  7_space_3.html  8_aligment_1.html  9_aligment_2.html  base.html  home.html
